--- a/css/page-dist.css
+++ b/css/page-dist.css
@@ -770,6 +770,9 @@ margin-bottom: 40px;
 
 }
 @media screen and (max-width: 991px){
+  .place-item-description p{
+    font-size: 16px;
+  }
   .pre-footer span {
     display: flex;
     align-items: center;
